--- a/Index.html
+++ b/Index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Image Cleaner Tool</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Image Cleaner</title>
   <style>
     body {
       margin: 0;
@@ -18,51 +18,51 @@
     h1 {
       color: #00ffff;
     }
-    .upload-box {
-      margin-top: 20px;
+    .box {
       background: #1a1a1a;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 10px #00ffff44;
+      box-shadow: 0 0 10px #00ffff99;
+      margin-top: 20px;
     }
     input[type="file"] {
-      color: white;
+      padding: 10px;
       background: #111;
-      border: 1px solid #444;
-      padding: 8px;
-      margin-bottom: 10px;
-    }
-    canvas {
-      margin-top: 20px;
+      color: white;
       border: 1px solid #555;
-      max-width: 100%;
     }
     .btn {
       background: #00ffff;
-      color: black;
       border: none;
-      padding: 10px 20px;
-      border-radius: 6px;
+      color: #000;
+      padding: 10px 15px;
+      margin: 10px;
+      border-radius: 5px;
       cursor: pointer;
-      font-weight: bold;
+    }
+    canvas {
+      margin-top: 20px;
+      border: 1px solid #444;
     }
   </style>
 </head>
 <body>
   <h1>AI Image Cleaner</h1>
-  <div class="upload-box">
-    <input type="file" id="imageUpload" accept="image/*" /><br />
-    <button class="btn" onclick="removeWatermark()">Remove Watermark</button><br />
+  <div class="box">
+    <input type="file" id="upload" accept="image/*" />
+    <br />
+    <button class="btn" onclick="removeWatermark()">Remove Watermark</button>
+    <button class="btn" onclick="downloadImage()">Download</button>
     <canvas id="canvas" style="display:none;"></canvas>
   </div>
 
   <script>
-    const upload = document.getElementById('imageUpload');
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
+    const upload = document.getElementById("upload");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
     let img = new Image();
 
-    upload.addEventListener('change', function () {
+    upload.addEventListener("change", () => {
       const file = upload.files[0];
       const reader = new FileReader();
       reader.onload = function (e) {
@@ -75,34 +75,21 @@
       canvas.width = img.width;
       canvas.height = img.height;
       ctx.drawImage(img, 0, 0);
-      canvas.style.display = 'block';
+      canvas.style.display = "block";
     };
 
     function removeWatermark() {
-      // Basic blur watermark region center (you can improve this logic)
+      // ⚠️ Replace this with proper AI later
       const width = canvas.width;
       const height = canvas.height;
 
-      // Change this region depending on your watermark position
-      const region = {
-        x: width / 2 - 100,
-        y: height / 2 - 20,
-        w: 200,
-        h: 40
-      };
+      // Repeat multiple box blurs (basic placeholder logic)
+      const regions = [
+        { x: width * 0.3, y: height * 0.1, w: 150, h: 30 },
+        { x: width * 0.6, y: height * 0.3, w: 150, h: 30 },
+        { x: width * 0.2, y: height * 0.5, w: 150, h: 30 }
+      ];
 
-      const imageData = ctx.getImageData(region.x, region.y, region.w, region.h);
-      const data = imageData.data;
-
-      // Simple average blur
-      for (let i = 0; i < data.length; i += 4) {
-        const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
-        data[i] = data[i + 1] = data[i + 2] = avg;
-      }
-
-      ctx.putImageData(imageData, region.x, region.y);
-      alert("✅ Watermark removal applied (basic AI)");
-    }
-  </script>
-</body>
-</html>
+      regions.forEach(region => {
+        let imageData = ctx.getImageData(region.x, region.y, region.w, region.h);
+        let data = imageData.data;
